# AdoraPlayer

./: .gitignore  AdoraPlayer.qrc  CMakeLists.txt  README.md  main.cpp
Base/: CMakeLists.txt  Namespace.h
Chain/: CMakeLists.txt  Chain.cpp  Chain.h  Request.cpp  Request.h  RequestStrategy.cpp  RequestStrategy.h  RequestStrategyFactory.cpp  RequestStrategyFactory.h
NotifyEvent/: CMakeLists.txt  NotifyEvent.cpp  NotifyEvent.h  Observer.cpp  Observer.h
Ui/: CMakeLists.txt  FrameWidget.cpp  FrameWidget.h  FrameWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
WindowMode/: CMakeLists.txt  FullScreenMode.cpp  FullScreenMode.h  MaximizedMode.cpp  MaximizedMode.h  RestoredMode.cpp  RestoredMode.h  WindowMode.cpp  WindowMode.h  WindowModeFactory.cpp  WindowModeFactory.h
